# NormaChain

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
agent_storage/: agent_info  key
agent_storage/Contract_Chain/: contract0.ct  contract1.ct  contract2.ct
approver_storage/: approver_info  approver_info2  approver_info3  approver_list
buyer_storage/: buyer_info  seller_list
cmake/: .hg_archival.txt  CMakeLists.txt  README.rst
config/: buyer_contractpath.config  consortium_graph.txt  node_ip.config  proofer.config  testkeys  verifer.config
seller_storage/: seller1_info
src/: CMakeLists.txt  main.cpp
src/agent/: CMakeLists.txt  agent.cpp  agent.h  main.cpp
src/approver/: CMakeLists.txt  approver.cpp  approver.h  main.cpp
src/buyer/: CMakeLists.txt  buyer.cpp  buyer.h  main.cpp
src/configparser/: CMakeLists.txt  configparser.cpp  configparser.h
src/contract/: CMakeLists.txt  contract.cpp  contract.h
src/eccverf/: CMakeLists.txt  EccVerf.cpp  EccVerf.cpp.autosave  EccVerf.h
src/eccverify/: CMakeLists.txt  eccverify.cpp  eccverify.h
src/ecies/: CMakeLists.txt  ecies.cpp  ecies.h
src/httpimpl/: client_http.hpp
src/peks/: CMakeLists.txt  peks.cpp  peks.h
src/proofer/: CMakeLists.txt  main.cpp  proofer.cpp  proofer.h
src/seller/: CMakeLists.txt  main.cpp  seller.cpp  seller.h
src/server/: CMakeLists.txt  graph.cpp  graph.h  kdc.cpp  kdc.h  main.cpp
src/supervisor/: CMakeLists.txt  main.cpp  supervisor.cpp  supervisor.h
src/verifier/: CMakeLists.txt  main.cpp  verifier.cpp  verifier.h
supervisor_storage/: agent_info
